load("@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_archive",
    "ocaml_module",
    "ocaml_ns_archive",
    "ocaml_signature",
)

###############################################
########### Archive/Library Targets ###########

######## tezos-context ########
TEZOS_CONTEXT_OPTS = [
    "-open", "Tezos_base__TzPervasives",
    "-open", "Tezos_shell_services",
    "-open", "Tezos_stdlib",
    "-open", "Tezos_stdlib_unix",
]

TEZOS_CONTEXT_DEPS = [
    "//src/lib_base:tezos-base",
    "//src/lib_context/encoding:tezos-context.encoding",
    "//src/lib_context/helpers:tezos-context.helpers",
    "//src/lib_context/sigs:tezos-context.sigs",
    "//src/lib_shell_services:tezos-shell-services",
    "//src/lib_stdlib_unix:tezos-stdlib-unix",
    "@digestif//c",
    "@digestif//:digestif",
    "@irmin-pack//:irmin-pack",
    "@irmin//:irmin",
    "@logs//fmt",
]

ocaml_ns_archive(
    name       = "tezos-context",
    ns         = "Tezos_context",
    visibility = ["//visibility:public"],
    submodules = [
        ":Context",
        ":Context_dump",
        ":Context_dump_intf",
    ],
)

#############################
####  Singleton Targets  ####

ocaml_module(
    name     = "Context",
    struct   = "context.ml",
    sig      = ":Context_cmi",
    opts     = TEZOS_CONTEXT_OPTS,
    deps     = TEZOS_CONTEXT_DEPS + [
       ":Context_dump",
    ]
)

ocaml_signature(
    name     = "Context_cmi",
    src      = "context.mli",
    opts     = TEZOS_CONTEXT_OPTS,
    deps     = TEZOS_CONTEXT_DEPS + [
    ]
)

ocaml_module(
    name     = "Context_dump",
    struct   = "context_dump.ml",
    sig      = ":Context_dump_cmi",
    opts     = TEZOS_CONTEXT_OPTS,
    deps     = TEZOS_CONTEXT_DEPS + [
       ":Context_dump_intf",
    ]
)

ocaml_signature(
    name     = "Context_dump_cmi",
    src      = "context_dump.mli",
    opts     = TEZOS_CONTEXT_OPTS,
    deps     = TEZOS_CONTEXT_DEPS + [
       ":Context_dump_intf",
    ]
)

ocaml_module(
    name     = "Context_dump_intf",
    struct   = "context_dump_intf.ml",
    opts     = TEZOS_CONTEXT_OPTS,
    deps     = TEZOS_CONTEXT_DEPS + [
    ]
)

